apps/media/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
<<<<<<< HEAD
      nodeSelector:
        homeserver.richcorless.io/node-tier: trusted
=======
      serviceAccountName: homepage
>>>>>>> origin/main
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.13.2
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
          volumeMounts:
            - name: homepage-config-writable
              mountPath: /app/config
      volumes:
        - name: homepage-config
          configMap:
            name: homepage-config
        - name: homepage-config-writable
          emptyDir: {}
